# my_silicon_brain

./: .gitignore  COMPARISON.md  Modefile  README.md  USAGE.md  demo.py  draft.md  file_hashes.json  ghelper_bypass_localhost.yaml  main.py  milvus_demo.db  pyproject.toml  requirements.txt
config/: file_hashes_FLAT.json
src/: demo.py  investment_research_system.py  knowledge_base.py  local_llm_direct.py  main.py  mcp_web_search.py
src_functional/: README.md  knowledge_base.py  local_llm_config.py  local_llm_direct.py
src_stale/: local_llm_config.py  local_llm_direct.py  main.py
test/test_mcp/: list_mcp_tools.py  server_config.json
test/test_mcp/documents/: 国庆消费.md
test/test_milvus/: connection.py
test/test_unstructured/: test_md.py  test_pdf.py
test/test_web_search/: test_google_search_official.py  test_tavily.py
test_mcp/: mcp_chatbot.py  server_config.json
test_mcp/papers/chemistry/: papers_info.json
test_mcp/papers/gold_investments/: papers_info.json
test_milvus/: HNWS.py  query_parsing.py  reranker.py
test_ollama/: test_ollama_qwen
test_unstructured/: test_md.py  test_pdf.py
tools/: README.md  milvus_tool.py  milvus_tool_example.py
